[gd_scene load_steps=10 format=2]

[ext_resource path="res://FarmNer/Assets/Textures/dynamiteOutline.png" type="Texture" id=1]
[ext_resource path="res://FarmNer/Assets/Textures/dynamite.png" type="Texture" id=2]
[ext_resource path="res://FarmNer/Assets/Dynamite/DynamiteSequence.gd" type="Script" id=3]
[ext_resource path="res://FarmNer/Assets/Textures/lightTexture.png" type="Texture" id=4]
[ext_resource path="res://FarmNer/Sounds/FuseSound/fuseSound.wav" type="AudioStream" id=5]
[ext_resource path="res://FarmNer/Assets/Dynamite/ExplosionVFX.tscn" type="PackedScene" id=6]
[ext_resource path="res://FarmNer/Sounds/FuseSound/explosion.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.0198676, 0.980132 )
colors = PoolColorArray( 1, 0.65625, 0, 1, 0.992188, 1, 0, 1, 1, 0.585938, 0, 1 )

[node name="DynamiteSequence" type="Node2D"]
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( -2.90371, -2.90371 )
shape = SubResource( 1 )

[node name="PlayerDetection" type="Area2D" parent="."]
scale = Vector2( 2.77159, 2.77159 )
collision_layer = 4096
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
scale = Vector2( -2.90371, -2.90371 )
shape = SubResource( 1 )

[node name="Outline" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -0.47858, 0.794761 )
rotation = 3.14159
scale = Vector2( 0.0868862, 0.0868862 )
enabled = false
texture = ExtResource( 4 )
color = Color( 0.921569, 0.407843, 0.0313726, 1 )
energy = 0.8

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( -2.14923, -4.98826 )
rotation = 2.51954
scale = Vector2( 0.829577, 0.829577 )
emitting = false
lifetime = 0.3
initial_velocity = 64.52
color_ramp = SubResource( 2 )

[node name="Explosion" parent="." instance=ExtResource( 6 )]
position = Vector2( -0.0421315, -0.0296425 )
rotation = 3.14159
scale = Vector2( 0.505361, 0.505361 )

[node name="FuseSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -0.47858, 0.794761 )
rotation = 3.14159
scale = Vector2( 0.0868862, 0.0868862 )
stream = ExtResource( 5 )
volume_db = -5.0

[node name="Explosion2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_PlayerDetection_body_exited"]
[connection signal="finished" from="FuseSound" to="." method="_on_FuseSound_finished"]
